--- a/FrontEnd/extension/options.html
+++ b/FrontEnd/extension/options.html
@@ -3,13 +3,19 @@
   <head>
     <style>
       button {
-        height: 30px;
-        width: 30px;
+        height: 300px;
+        width: 300px;
         outline: none;
+      }
+      #main-title {
+        font-size: 30px;
+        text-align: center;
       }
     </style>
   </head>
   <body>
+    <div id="main-title">Key Points</div>
+
     <button>TEST</button>
   </body>
   <script src=”options.js”></script>
