--- a/FrontEnd/extension/popup.html
+++ b/FrontEnd/extension/popup.html
@@ -10,6 +10,7 @@
     </style>
   </head>
   <body>
-    <button>TEST</button>
+    <button id="changeColor"></button>
+    <script src="popup.js"></script>
   </body>
 </html>
